Added dependency from hc-backend

--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,7 @@
 
     "require": {
         "php": ">=5.3",
+        "huskycms/hc-backend": "dev-master",
         "zendframework/zendframework": ">=2.0.0",
         "spalax/zf2-libs": "dev-master",
         "spalax/zf2-file-uploader": "dev-master",
