Updated dependencies to the letest ZF2

--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,8 @@
     "require": {
         "php": ">=5.3",
         "huskycms/hc-backend": "dev-master",
-        "zendframework/zendframework": ">=2.0.0",
+        "huskycms/hc-core": "dev-master",
+        "zendframework/zendframework": ">=2.3",
         "spalax/zf2-libs": "dev-master",
         "spalax/zf2-file-uploader": "dev-master",
         "doctrine/doctrine-module": "0.*",
